--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "express": "^4.18.2",
     "json-server": "^0.17.1",
     "rc-time-picker": "^3.7.3",
     "react": "^18.2.0",
