--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+
   "name": "daily-planner",
   "version": "0.1.0",
   "homepage": "https://TheAnonymous.github.io/daily-planner",
@@ -22,6 +23,7 @@
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
+  "react-scripts": "5.0.0",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
